<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    tools:context=".view.user.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_80sdp"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/ic_laptop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_secondary" />

    <TextView
        android:id="@+id/textView1"
        style="@style/tvH3Style"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/enter_your_name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <EditText
            android:id="@+id/firstName"
            style="@style/edtStyle"
            android:layout_marginVertical="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="text" />

        <EditText
            android:id="@+id/lastName"
            style="@style/edtStyle"
            android:layout_marginVertical="0dp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="text" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        style="@style/tvH3Style"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone" />

    <EditText
        android:id="@+id/email"
        style="@style/edtStyle"
        android:hint="@string/abc_example_com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        style="@style/tvH3Style"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/password"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        style="@style/edtStyle"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView6"
        style="@style/tvH3Style"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/code"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <EditText
        android:id="@+id/code"
        style="@style/edtStyle"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginVertical="@dimen/_5sdp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:longClickable="false"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/buttonStyle"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/code" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/buttonStyle"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/login"
        android:backgroundTint="@color/text_secondary"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>