<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_15sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/tv5"
        style="@style/tvH3Style"
        android:layout_marginStart="@dimen/_10sdp"
        android:text="@string/email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/resetEmail"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resetEmail"
        style="@style/edtStyle"
        android:hint="@string/abc_example_com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv5" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/resetEmail"
        app:layout_constraintStart_toStartOf="@+id/resetEmail"
        app:layout_constraintTop_toBottomOf="@+id/resetEmail" />

    <EditText
        android:id="@+id/pinCode"
        style="@style/edtStyle"
        android:hint="@string/enter_8_digit_code"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="8"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorText" />

    <Button
        android:id="@+id/btnReset"
        style="@style/buttonStyle"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="25dp"
        android:text="@string/get_reset_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinCode" />

    <ProgressBar
        android:id="@+id/loaderSheet"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnReset"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintTop_toTopOf="@+id/btnReset" />

</androidx.constraintlayout.widget.ConstraintLayout>